# TRPGDegital

./: .gitignore  README.md  bot.py  dice.py  docker-compose.yml  gm.py  main.py  pyproject.toml  requirements.txt  session.py  weapon_templates.py
.obsidian/: workspace.json
Rule/: character_creation.md  core_rules.md  game_rules.md
backend/: requirements.txt
backend/app/: database.py  main.py
backend/app/models/: character.py  session.py
backend/app/routers/: characters.py  sessions.py
backend/app/schemas/: character.py  session.py
characters/: suzuki.json  tanaka.json  template_charactor.json  test1.json  yamada.json
createcharacters/: create_charactor.py  main.py
db/: init.sql
docs/: before_developing.md  coc-ai-gm-discord-bot-design.md
docs/Scenario_Analyzer/: Senario_Analyzer_prompt.md
docs/architecture/: .$analyzed_scenario_schema.drawio.bkp  analyzed_scenario_schema.drawio  analyzed_scenario_schema.mmd  character_create_flow.mmd  gm_agent_architecture.mmd
docs/schema/: analyzed_scenario_schema.json
frontend/: Dockerfile.dev  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: CharacterCreatePage.tsx  (+2 more)
nginx/: nginx.conf
playtest/: __init__.py  agents.py  assertions.py  cli.py  clients.py  models.py  runner.py
prompts/: system_prompt.txt
scenarios/: the_haunting.md
scenarios/scenario_01/: scenario_01.md
scenarios/the_haunting/: analyzed_master_data.json
tests/: test_gm_fallbacks.py  test_playtest_assertions.py  test_playtest_runner.py
(+2 files in other folders)
